--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,22 @@ Click==7.0
 pymongo==3.7.2
 redis==3.2.0
 toml==0.10.0
+appdirs==1.4.3
+attrs==18.2.0
+black==19.3b0
+Click==7.0
+elasticsearch==7.0.2
+entrypoints==0.3
+flake8==3.7.7
+mccabe==0.6.1
+neo4j==1.7.4
+neobolt==1.7.13
+neotime==1.7.4
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pymongo==3.8.0
+pytz==2019.1
+redis==3.2.1
+six==1.12.0
+toml==0.10.0
+urllib3==1.24.1
